Fix header-wrapper::before overlay using negative z-index

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -535,6 +535,7 @@
 	#header-wrapper {
 		background: url('../../images/banner.png') center center;
 		background-size: cover;
+		z-index: -2;
 
 		&:before {
 			content: '';
@@ -543,6 +544,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
+			z-index: -1;
 			background-image: url('images/overlay.png'), linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6));
 		}
 	}
